technologies sections no longer covering bio on mobile sized screens

--- a/src/styles/_sections.scss
+++ b/src/styles/_sections.scss
@@ -20,9 +20,14 @@
   text-align: center;
 }
 
+// .fullPage {
+//   margin-bottom: 3%;
+// }
+
 
 #technologiesPage {
   background-color: $color-4;
+  // margin-top: 3%;
 }
 
 .icons {
@@ -33,6 +38,7 @@
 #bioPage {
   height: 65vh;
   width: 100%;
+  margin-bottom: 30px;
 }
 
 h3 {
